--- a/frontend/src/Components/Homepage/style.css
+++ b/frontend/src/Components/Homepage/style.css
@@ -1,5 +1,30 @@
+.homepage  {
+    height: 650px;
+}
+
 .homepage img {
     width: 100%;
-    height: 650px;
+    height: 100%;
     object-fit: cover;
+}
+
+.products {
+ width: 100%;
+}
+
+.products .bodyProducts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    margin: 5px;
+}
+
+.productHeading h2{
+    text-align: center;
+    font-family: "Noto Sans JP", sans-serif;
+    font-size: 35px;
+    margin: 20px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.95);
 }
