--- a/frontend/src/Components/Homepage/style.css
+++ b/frontend/src/Components/Homepage/style.css
@@ -1,4 +1,4 @@
-.homepage  {
+.homepage {
     height: 650px;
 }
 
@@ -9,7 +9,8 @@
 }
 
 .products {
- width: 100%;
+    width: 95%;
+    margin: auto;
 }
 
 .products .bodyProducts {
@@ -20,11 +21,18 @@
     margin: 5px;
 }
 
-.productHeading h2{
+.productHeading h2 {
     text-align: center;
     font-family: "Noto Sans JP", sans-serif;
     font-size: 35px;
     margin: 20px;
-    font-weight: 400;
+    font-weight: 300;
     color: rgba(0, 0, 0, 0.95);
+}
+
+@media only screen and (max-width: 1000px) {
+    .homepage {
+        height: auto;
+    }
+    
 }
