--- a/frontend/src/Components/Product/Products/ProductsCard/style.css
+++ b/frontend/src/Components/Product/Products/ProductsCard/style.css
@@ -1,8 +1,8 @@
-.bodyProductCard {
-    width: 20%;
+.bodyProductsCard {
+    width: 25%;
 }
 
-.productCard {
+.productsCard {
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -11,7 +11,7 @@
     margin: calc(10px / 2);
 }
 
-.productCard>img {
+.productsCard>img {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     height: 350px;
@@ -19,11 +19,11 @@
     border-bottom: 1px solid rgb(223, 223, 223);
 }
 
-.productCard>.details {
+.productsCard>.productsDetails {
     margin: 10px;
 }
 
-.productCard>.details>p {
+.productsCard>.productsDetails>p {
     font-size: 17px;
     font-weight: 400;
     margin: 0;
@@ -31,20 +31,20 @@
     font-family: "Noto Sans JP", sans-serif;
 }
 
-.productCard .details .ratingReviews {
+.productsCard .productsDetails .ratingReviews {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.productCard .details .ratingReviews>span {
+.productsCard .productsDetails .ratingReviews>span {
     color: black;
     font-size: 16px;
     font-weight: 400;
     font-family: "Noto Sans JP", sans-serif;
 }
 
-.productCard .details .priceStock {
+.productsCard .productsDetails .priceStock {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,14 +52,14 @@
     height: 40px;
 }
 
-.productCard .details .priceStock h3 {
+.productsCard .productsDetails .priceStock h3 {
     color: black;
     font-size: 17px;
     font-weight: 400;
     font-family: "Noto Sans JP", sans-serif;
 }
 
-.productCard .details .priceStock>span {
+.productsCard .productsDetails .priceStock>span {
     color: black;
     font-size: 16px;
     font-weight: 400;
@@ -67,25 +67,19 @@
 }
 
 @media screen and (max-width: 1400px) {
-    .bodyProductCard {
-        width: 25%;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .bodyProductCard {
+    .bodyProductsCard {
         width: 33.333333%;
     }
 }
 
-@media screen and (max-width: 850px) {
-    .bodyProductCard {
+@media screen and (max-width: 1100px) {
+    .bodyProductsCard {
         width: 50%;
     }
 }
 
-@media screen and (max-width: 550px) {
-    .bodyProductCard {
-        width: 100%;
+@media screen and (max-width: 850px) {
+    .bodyProductsCard {
+        width: 100%
     }
 }
