--- a/frontend/src/Components/Layouts/Header/style.css
+++ b/frontend/src/Components/Layouts/Header/style.css
@@ -65,7 +65,6 @@
     background-color: #f0f0f0;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.01);
-    padding: 2px;
 }
 
 .icons ul li a {
@@ -78,6 +77,7 @@
 
 .icons ul li:last-child {
     margin-right: 0px;
+    margin-left: 7px;
 }
 
 .icons ul li a svg {
