--- a/frontend/src/Components/User/UpdatePassword/style.css
+++ b/frontend/src/Components/User/UpdatePassword/style.css
@@ -1,4 +1,4 @@
-.updateProfileContainer {
+.passwordChangeContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     min-height: calc(100vh - 92px);
 }
 
-.updateProfileBox {
+.passwordChangeBox {
     background-color: rgb(255, 255, 255);
     width: 400px;
     height: 500px;
@@ -17,7 +17,7 @@
     border-radius: 11px;
 }
 
-.updateProfileBox .updateProfile {
+.passwordbox {
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
@@ -29,7 +29,7 @@
     position: relative;
 }
 
-.updateProfile h2 {
+.passwordbox h2{
     color: rgba(0, 0, 0);
     font-size: 19px;
     font-weight: 400;
@@ -39,13 +39,13 @@
     margin-bottom: 20px;
 }
 
-.updateProfile .updateInput{
+.updatePasswordInput {
     display: flex;
     width: 100%;
     align-items: center;
 }
 
-.updateProfile .updateInput input {
+.passwordbox .updatePasswordInput input {
     width: 100%;
     margin-top: calc(30px / 2);
     margin-bottom: calc(30px / 2);
@@ -60,16 +60,16 @@
     color: rgba(0, 0, 0, 0.9);
 }
 
-.updateProfile .updateInput input:focus {
+.passwordbox .updatePasswordInput input:focus {
     outline: none;
 }
 
-.updateSubmitBtn {
+.updatePasswordBtn {
     position: absolute;
     bottom: 50px;
 }
 
-.updateSubmitBtn input {
+.updatePasswordBtn input {
     background-color: rgb(224, 223, 223);
     border: none;
     font-family: "Noto Sans JP", sans-serif;
@@ -77,7 +77,7 @@
     font-size: 17px;
     font-weight: 500;
     padding: 7px 0px 10px 0px;
-    width: 140px;
+    width: 170px;
     height: 50px;
     text-align: center;
     border-radius: 2px;
