--- a/frontend/src/Components/User/ForgotPassword/style.css
+++ b/frontend/src/Components/User/ForgotPassword/style.css
@@ -1,4 +1,4 @@
-.passwordChangeContainer {
+.forgotPasswordContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     min-height: calc(100vh - 92px);
 }
 
-.passwordChangeBox {
+.forgotPasswordChangeBox {
     background-color: rgb(255, 255, 255);
     width: 400px;
     height: 500px;
@@ -17,7 +17,7 @@
     border-radius: 11px;
 }
 
-.passwordbox {
+.forgotPassword {
     width: 100%;
     height: 100%;
     background-color: rgb(255, 255, 255);
@@ -29,7 +29,7 @@
     position: relative;
 }
 
-.passwordbox h2{
+.forgotPassword h2 {
     color: rgba(0, 0, 0);
     font-size: 19px;
     font-weight: 400;
@@ -39,13 +39,13 @@
     margin-bottom: 10px;
 }
 
-.updatePasswordInput {
+.forgotPasswordInput {
     display: flex;
     width: 100%;
     align-items: center;
 }
 
-.passwordbox .updatePasswordInput input {
+.forgotPassword input {
     width: 100%;
     margin-top: calc(30px / 2);
     margin-bottom: calc(30px / 2);
@@ -60,22 +60,23 @@
     color: rgba(0, 0, 0, 0.9);
 }
 
-.passwordbox .updatePasswordInput input:focus {
+.forgotPassword input:focus {
     outline: none;
 }
 
-.updatePasswordBtn {
+.submitForgotPassword {
     position: absolute;
     bottom: 50px;
 }
 
-.updatePasswordBtn input {
+.submitForgotPassword input {
     background-color: rgb(224, 223, 223);
     border: none;
     font-family: "Noto Sans JP", sans-serif;
     color: rgba(0, 0, 0);
     font-size: 17px;
     font-weight: 500;
+    margin: 0;
     padding: 7px 0px 10px 0px;
     width: 170px;
     height: 50px;
