--- a/frontend/src/Components/Product/ProductDetails/style.css
+++ b/frontend/src/Components/Product/ProductDetails/style.css
@@ -96,25 +96,24 @@
     margin-top: 10px;
 }
 
-.detailsContent .priceAndAddRemove .addRemoveButtons{
+.addRemoveButtons{
     display: flex;
 }
 
-.detailsContent .priceAndAddRemove .addRemoveButtons button {
+.addRemoveButtons button {
     background-color: #dfdfdf;
     border: none;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border-radius: 2px;
     font-family: "Noto Sans JP", sans-serif;
     color: rgba(0, 0, 0, 0.9);
     font-size: 16px;
-    border: 1px solid rgb(216, 216, 216);
     cursor: pointer;
     padding-top: 3px;
-}
+} 
 
-.detailsContent .priceAndAddRemove .addRemoveButtons h2 {
+.addRemoveButtons h2 {
     background-color: transparent;
     border: none;
     width: 40px;
@@ -163,11 +162,12 @@
     margin: 0;
 }
 
-.detailsContent .twoButtons {
+.addToCartAndButtons {
     display: flex;
+    gap: 20px;
 }
 
-.detailsContent .twoButtons .addToCart button {
+.addToCartAndButtons .addToCart button {
     background-color: rgb(224, 223, 223);
     border: none;
     font-family: "Noto Sans JP", sans-serif;
@@ -180,7 +180,7 @@
     cursor: pointer;
 }
 
-.detailsContent .twoButtons .submitReview button {
+.submitReview button {
     background-color: rgb(224, 223, 223);
     border: none;
     font-family: "Noto Sans JP", sans-serif;
@@ -218,6 +218,78 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+.productDetailRating span{
+    color: rgb(154, 154, 154);
+    font-size: 30px;
+}
+
+.dialogBox .MuiDialog-paper{
+    width: 320px;
+    padding: 15px;
+    margin: auto; 
+    padding: 30px 20px;
+}
+
+.dialogBox .MuiDialogContent-root{
+    padding: 0px !important;
+}
+
+.dialogBox h2 {
+    font-family: "Noto Sans JP", sans-serif;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 19px;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.submitCommentContent textarea{
+    height: 100px;
+    min-height: 100px;
+    max-height: 100px;
+    max-width: 100%;
+    min-width: 100%;
+    margin: 20px 0px;
+    margin: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: 1px solid #87878730;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 18px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-weight: 400;
+}
+
+.submitCommentContent textarea:focus {
+    outline: none;
+}
+
+.submitCommentButtons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.submitCommentButtons button {
+    background-color: rgb(224, 223, 223);
+    border: none;
+    font-family: "Noto Sans JP", sans-serif;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 17px;
+    font-weight: 400;
+    padding: 7px 15px 8px 15px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.ratingComment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 1150px) {
