--- a/frontend/src/Components/Order/MyOrders/style.css
+++ b/frontend/src/Components/Order/MyOrders/style.css
@@ -8,7 +8,7 @@
 
 .myOrdersPage {
     width: 90%;
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 40px auto;
 }
 
@@ -47,4 +47,8 @@
 
 .css-1w5m2wr-MuiDataGrid-virtualScroller::-webkit-scrollbar-thumb:hover {
     background: rgb(195, 195, 195);
+}
+
+.myOrdersTable .MuiDataGrid-columnSeparator {
+    display: none !important;
 }
