--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
 * {
   box-sizing: border-box;
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
+  margin: 0;
 }
-
+ 
 a {
   text-decoration: none;
 }
