--- a/frontend/src/Components/Layouts/Header/style.css
+++ b/frontend/src/Components/Layouts/Header/style.css
@@ -1,21 +1,55 @@
 .header {
     background-color: white;
-    padding: 7px 0px 8px 0px;
     position: sticky;
     top: 0;
     z-index: 999;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    position: sticky;
-    top:0;
 }
 
 .header .contant {
+    max-width: 1328px;
+    padding: 5px 15px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 95%;
+}
+
+.searchBox {
+    padding: 5px 5px 5px 0px;
+    position: relative;
+}
+
+.searchBox form {
+    min-width: 400px;
     width: 100%;
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.searchBox form input {
+    width: 100%;
+    height: 45px;
+    padding: 0px 10px 2px 38px;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    border: 1px solid #87878750;
+    border-radius: 25px;
+    letter-spacing: 0.2px;    
+}
+
+.searchBox form input:focus {
+    outline: none;
+}
+
+.searchBox form img {
+    position: absolute;
+    top: 15px;
+    left: 9px;
+    width: 26px;
 }
 
 .header a {
@@ -24,29 +58,11 @@
 }
 
 .header a .logo {
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 37px;
-    font-weight: 300;
-    margin-top: -3px;
-}
-
-.otherRoutes ul{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    padding: 0px;
-}
-
-.otherRoutes ul li {
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 16px;
+    font-family: 'Caveat';
+    color: #f43397;
+    font-size: 34px;
     font-weight: 400;
-    padding: 0px 10px;
-}
-
-.otherRoutes ul li a {
-    color: rgba(0, 0, 0, 0.9);
+    padding-bottom: 3px;
 }
 
 .icons ul{
@@ -65,7 +81,7 @@
     align-items: center;
     background-color: #f0f0f0;
     border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.01);
+    background-color: #f4339720;
 }
 
 .icons ul li a {
@@ -83,6 +99,7 @@
 
 .icons ul li a svg {
     font-size: 20px;
+    fill: #f43397 !important;
 }
 
 .speedDialBody .css-11u3b1d-MuiSpeedDial-root {
@@ -100,22 +117,52 @@
     background: transparent !important;
 }
 
-.speedDialBody img {
+.userIcon {
     height: 43px;
     width: 43px;
     object-fit: cover;
     border-radius: 50%;  
 }
 
-.css-11u3b1d-MuiSpeedDial-root button {
-    background: #f0f0f0 !important;
-    transition: none !important;
+.speedDialBody img {
+    height: 43px;
+    width: 43px;
+    object-fit: cover;
+    border-radius: 50%; 
 }
 
+.css-11u3b1d-MuiSpeedDial-root button {
+    background: #f4339770 !important;
+    transition: none !important;
+    color: #f43397 !important;
+} 
+
 .css-11u3b1d-MuiSpeedDial-root button svg {
-    color: rgba(0, 0, 0, 0.8);
+    color: #f43397;
 }
 
 .MuiMenu-paper {
     transition-duration: 0s !important;
+}
+
+.categoryHeader {
+    position: sticky;
+    top: 66px;
+    width: 100%;
+    background-color: white;
+    margin: auto;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.categoryHeader .contant {
+    padding: 15px 15px;
+    max-width: 1328px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.categoryHeader .contant .item a {
+    color: #5c5c5c;
 }
