--- a/frontend/src/Components/Layouts/Footer/style.css
+++ b/frontend/src/Components/Layouts/Footer/style.css
@@ -2,25 +2,25 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     flex-direction: column;
     margin-top: auto;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .footer .logo {
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 35px;
-    font-weight: 300;
-    color: rgba(0, 0, 0, 0.9);
-    margin-bottom: 10px;
+    font-family: 'Caveat';
+    color: #f43397;
+    font-size: 34px;
+    font-weight: 400;
+    margin-bottom: 8px;
 }
 
 .rides {
-    margin-top: 10px;
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
+    margin-top: 8px;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
     letter-spacing: 0.2px;
-    color: rgba(0, 0, 0, 0.9);
+    color: #f43397;
 }
