--- a/frontend/src/Components/Layouts/Header/style.css
+++ b/frontend/src/Components/Layouts/Header/style.css
@@ -8,7 +8,7 @@
 
 .header .contant {
     max-width: 1328px;
-    padding: 5px 15px;
+    padding: 3px 15px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -32,8 +32,8 @@
 .searchBox form input {
     width: 100%;
     height: 45px;
-    padding: 0px 10px 2px 38px;
-    font-family: "Noto Sans", sans-serif;
+    padding: 0px 10px 0px 38px;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 400;
     border: 1px solid #87878750;
@@ -147,10 +147,11 @@
 
 .categoryHeader {
     position: sticky;
-    top: 66px;
+    top: 62px;
     width: 100%;
     background-color: white;
-    margin: auto;
+    z-index: 10;
+    margin: 0px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -164,5 +165,7 @@
 }
 
 .categoryHeader .contant .item a {
-    color: #5c5c5c;
+    font-family: 'Roboto';
+    color: #727272;
+    letter-spacing: 0.2px;
 }
