--- a/frontend/src/Components/Layouts/Footer/style.css
+++ b/frontend/src/Components/Layouts/Footer/style.css
@@ -20,7 +20,7 @@
     margin-top: 8px;
     font-family: "Roboto", sans-serif;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: 0.2px;
-    color: #f43397;
+    color: #6e6e6e;
 }
