--- a/frontend/src/Components/Product/Products/style.css
+++ b/frontend/src/Components/Product/Products/style.css
@@ -1,49 +1,70 @@
 .productsPageBody {
-    margin: 30px 15px;
+    margin: 20px 15px;
     display: grid;
     grid-template-columns: 1fr 4fr;
+    gap: 20px;
 }
 
 .productsContainer {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    flex-direction: column;
+}
+ 
+.productsBody {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
 }
 
 .paginationBox {
     display: flex;
     justify-content: center;
     width: 100%;
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: "Roboto", sans-serif;
+    margin-top: 20px;
 }
 
 .pagination {
     display: flex;
     justify-content: center;
     padding: 0;
+    height: fit-content;
+    gap: 20px;
 }
 
 .pageItem {
     list-style: none;
-    padding: 8px 13px 10px 13px;
-    border: 1px solid #e9e9e9;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all 0.3s;
     cursor: pointer;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.2px;
 }
 
-.pageItemActive {
-    border: 1px solid #c7c7c7;
+.pageItemActive .pageLink {
+    color: #f43397;
 }
 
 .pageItem:first-child {
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
+    display: none;
+}
+
+.pageItem:nth-child(2) .pageLink {
+    color: #f43397;
 }
 
 .pageItem:last-child {
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
+    display: none;
+}
+
+.pageItem:nth-last-child(2) .pageLink {
+    color: #f43397;
 }
 
 .pageLink {
@@ -52,13 +73,9 @@
 }
 
 .filterBoxMainBody {
-    /* display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    border-radius: 8px; */
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    height: fit-content;
 }
 
 .filterBoxMainBody .heading {
@@ -148,56 +165,38 @@
     letter-spacing: 0.2px;
 }
 
-.coverOfSelectBox {
-    width: 230px;
+@media only screen and (max-width: 1100px) {
+    .productsPageBody {
+        margin: 20px 15px;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }    
+
+    .productsBody {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+    }
 }
 
-.variantsBody {
-    display: flex;
-    padding: 5px 5px 5px 0px;
-    width: 100%;
-    box-sizing: border-box;
+@media only screen and (max-width: 900px) {
+    .productsPageBody {
+        margin: 20px 15px;
+        display: grid;
+        grid-template-columns: 1fr;
+    }    
+
+    .productsBody {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
 }
 
-.ratingBody {
-    display: flex;
-    padding: 5px 5px 5px 0px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.priceBody {
-    display: flex;
-    padding: 5px 5px 5px 0px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.reviewBody {
-    display: flex;
-    padding: 5px 5px 5px 0px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.variantsBody select,
-.ratingBody select,
-.priceBody select,
-.reviewBody select{
-    width: 100%;
-    font-family: "Noto Sans JP", sans-serif;
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
-    height: 55px; 
-    font-size: 17px;
-    font-weight: 400;
-    padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
-}
-
-.variantsBody select:focus,
-.ratingBody select:focus,
-.priceBody select:focus{
-    outline: none;
+@media only screen and (max-width: 450px) {
+    .productsBody {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
 }
