--- a/frontend/src/Components/Product/Products/ProductsCard/style.css
+++ b/frontend/src/Components/Product/Products/ProductsCard/style.css
@@ -6,80 +6,72 @@
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    border: 1px solid rgb(227, 227, 227);
-    border-radius: 6px;
-    margin: calc(10px / 2);
+    border: 1px solid #0000001a;
+    border-radius: 10px;
 }
 
-.productsCard > img {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    height: 400px; 
-    object-fit: cover;
-    border-bottom: 1px solid rgb(223, 223, 223);
+.productsCard img {
+    width: 100%;
+    height: 300px;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    object-fit: contain;
+    background-color: #ececec40;
 }
 
-.productsCard>.productsDetails {
+.productsCard .productsDetails {
     margin: 10px;
 }
-
-.productsCard>.productsDetails>p {
-    font-size: 17px;
-    font-weight: 400;
-    margin: 0;
-    color: black;
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-.productsCard .productsDetails .ratingReviews {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.productsCard .productsDetails .ratingReviews>span {
-    color: black;
+ 
+.productsCard .productsDetails p {
     font-size: 16px;
     font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
+    color: #727272;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.2px;
+}
+
+.productsCard .productsDetails .reviews {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+}
+
+.productsCard .productsDetails .reviews h2 {
+    font-size: 12px;
+    font-weight: 600;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.2px;
+    color: #f4339790;
+}
+
+.productsCard .productsDetails .reviews div {
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    letter-spacing: 0.2px;
+}
+
+.productsCard .productsDetails .reviews div h3 {
+    width: 60px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 25px;
+    color: #f4339790;
+    background-color: #f4339715;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .productsCard .productsDetails .priceStock {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-family: "Noto Sans JP", sans-serif;
-    height: 40px;
+    font-family: "Roboto", sans-serif;
+    margin: 9px 0px 10px 0px;
 }
 
 .productsCard .productsDetails .priceStock h3 {
-    color: black;
-    font-size: 17px;
-    font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-.productsCard .productsDetails .priceStock>span {
-    color: black;
-    font-size: 16px;
-    font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
-}
-
-@media screen and (max-width: 1400px) {
-    .bodyProductsCard {
-        width: 33.333333%;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .bodyProductsCard {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 850px) {
-    .bodyProductsCard {
-        width: 100%
-    }
+    color: #272727;
+    font-size: 22px;
+    font-weight: 500;
+    font-family: sans-serif;
 }
