--- a/frontend/src/Components/Product/Products/style.css
+++ b/frontend/src/Components/Product/Products/style.css
@@ -73,7 +73,7 @@
 }
 
 .filterBoxMainBody {
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid #0000001a;
     border-radius: 10px;
     height: fit-content;
 }
