--- a/frontend/src/Components/Product/Products/ProductsCard/style.css
+++ b/frontend/src/Components/Product/Products/ProductsCard/style.css
@@ -26,7 +26,7 @@
 .productsCard .productsDetails p {
     font-size: 16px;
     font-weight: 400;
-    color: #727272;
+    color: #545454e6;
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.2px;
 }
@@ -47,21 +47,28 @@
 }
 
 .productsCard .productsDetails .reviews div {
-    font-size: 16px;
-    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.2px;
+    background-color: #f4339715;
+    border-radius: 25px;
+    padding: 6px 10px 6px 13px;
 }
 
 .productsCard .productsDetails .reviews div h3 {
-    width: 60px;
     text-align: center;
-    padding: 5px;
     border-radius: 25px;
-    color: #f4339790;
-    background-color: #f4339715;
-    font-size: 18px;
+    color: #f4339795;
+    font-size: 16px;
     font-weight: 500;
+}
+
+.productsCard .productsDetails .reviews div img {
+    object-fit: contain;
+    height: 10px;
 }
 
 .productsCard .productsDetails .priceStock {
@@ -70,7 +77,7 @@
 }
 
 .productsCard .productsDetails .priceStock h3 {
-    color: #272727;
+    color: #383838;
     font-size: 22px;
     font-weight: 500;
     font-family: sans-serif;
