--- a/frontend/src/Components/Product/ProductDetails/style.css
+++ b/frontend/src/Components/Product/ProductDetails/style.css
@@ -147,8 +147,104 @@
     font-family: 'Roboto';
 }
 
+.giveReview {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 10px;
+    padding: 15px;
+    background-color: #fafafa;
+}
+
+.giveReview textarea {
+    background-color: #44404210;
+    border: none;
+    resize: none;
+    min-height: 90px;
+    padding: 10px;
+    color: #383838;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Roboto';
+    letter-spacing: 0.2px;
+    line-height: 1.3;
+}
+
+.giveReview textarea::-webkit-scrollbar {
+    display: none;
+}
+
+.giveReview textarea:focus {
+    outline: none;
+}
+
+.postReview {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.ratingNumber {
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+.ratingNumber div {
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+}
+
+.ratingNumber div h4 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #44404210;
+    border-radius: 50%;
+    color: #383838;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#selectedRate h4 {
+    color: #f43397;
+    border: 1px solid #f4339730;
+}
+
+.postReview button {
+    color: #4c4c4c;
+    font-size: 12px;
+    font-weight: 600;
+    font-family: "Roboto", sans-serif;
+    background-color: #44404210;
+    width: 100%;
+    padding: 15px 15px;
+    border: none;
+    cursor: pointer;
+    letter-spacing: 0.4px;
+}
+
+@media screen and (max-width: 1050px) {
+    .giveReview {
+        grid-template-columns: 1fr;
+    }
+}
+
 @media screen and (max-width: 800px) {
     .productDetailsContent{
+        grid-template-columns: 1fr;
+    }
+
+    .giveReview {
+        grid-template-columns: 2fr 1fr;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .giveReview {
         grid-template-columns: 1fr;
     }
 }
