--- a/frontend/src/Components/Product/ProductDetails/style.css
+++ b/frontend/src/Components/Product/ProductDetails/style.css
@@ -94,7 +94,7 @@
 }
 
 .headerDetails h1 {
-    color: #383838;
+    color: #383838eb;
     font-size: 26px;
     font-weight: 400;
     font-family: sans-serif;
