--- a/frontend/src/Components/User/LoginSignup/style.css
+++ b/frontend/src/Components/User/LoginSignup/style.css
@@ -25,7 +25,6 @@
 .login_signUp_toggle p {
     color: #252525;
     font-family: "Roboto", sans-serif;
-    transition: all 0.5s;
     cursor: pointer;
     display: grid;
     place-items: center;
@@ -110,7 +109,7 @@
     padding: 0px 10px;
     color: #252525;
     letter-spacing: 0.2px;
-    background: #dd509710;
+    background: #dd509712;
 }
 
 .loginEmail input::placeholder,
@@ -202,7 +201,7 @@
     font-size: 16px;
     font-weight: 400;
     color: #252525;
-    background-color: #dd509710;
+    background-color: #dd509711;
     cursor: pointer;
     border: none;
     border-radius: 1px;
@@ -228,5 +227,10 @@
 @media screen and (max-width: 600px) {
     .LoginSignUpBox {
         margin: 15px 15px;
+    }
+
+    .loginForm,
+    .signupForm {
+        padding: 15px;
     }
 }
