--- a/frontend/src/Components/User/UpdatePassword/style.css
+++ b/frontend/src/Components/User/UpdatePassword/style.css
@@ -3,24 +3,22 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(255, 255, 255);
-    min-height: calc(100vh - 92px);
+    min-height: calc(100vh - 110px);
 }
 
 .passwordChangeBox {
-    background-color: rgb(255, 255, 255);
     width: 400px;
     height: 500px;
     margin: 50px auto;
     box-sizing: border-box;
     overflow: hidden;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 11px;
+    border-radius: 1px;
+    background: #cf559210;
 }
 
 .passwordbox {
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     padding: 23px 29px;
     display: flex;
@@ -30,13 +28,17 @@
 }
 
 .passwordbox h2{
-    color: rgba(0, 0, 0);
-    font-size: 19px;
-    font-weight: 400;
-    font-family: "Noto Sans JP", sans-serif;
-    text-align: center;
-    margin: 0;
-    margin-bottom: 10px;
+    color: #252525;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    padding-top: 4px;
+    padding-bottom: 10px;
 }
 
 .updatePasswordInput {
@@ -49,19 +51,23 @@
     width: 100%;
     margin-top: calc(30px / 2);
     margin-bottom: calc(30px / 2);
-    font-family: "Noto Sans JP", sans-serif;
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
+    border: none;
+    border-radius: 1px;
     height: 55px;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509712;
 }
 
 .passwordbox .updatePasswordInput input:focus {
     outline: none;
+}
+
+.passwordbox .updatePasswordInput input::placeholder {
+    color: #2f2f2f;
 }
 
 .updatePasswordBtn {
@@ -70,16 +76,24 @@
 }
 
 .updatePasswordBtn input {
-    background-color: rgb(224, 223, 223);
-    border: none;
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0);
-    font-size: 17px;
+    width: 120px;
+    color: #252525;
+    font-size: 14px;
     font-weight: 500;
-    padding: 7px 0px 10px 0px;
-    width: 170px;
-    height: 50px;
-    text-align: center;
-    border-radius: 2px;
+    font-family: "Roboto", sans-serif;
+    background-color: #dd509720;
+    padding: 15px 15px;
+    border: none;
     cursor: pointer;
+    letter-spacing: 0.4px;
+}
+
+@media screen and (max-width: 600px) {
+    .passwordChangeBox {
+        margin: 15px 15px;   
+    }
+
+    .passwordbox {
+        padding: 23px 15px;
+    }
 }
