--- a/frontend/src/Components/Cart/ConfirmOrder/style.css
+++ b/frontend/src/Components/Cart/ConfirmOrder/style.css
@@ -52,25 +52,25 @@
     color: #252525;
 }
 
-.ItemBoxConfirm {
+.itemBoxConfirm {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
 }
 
-.ItemBoxConfirm img {
-    width: 100px;
+.itemBoxConfirm img {
+    width: 90px;
     height: 100px;
     padding: 3px;
-    border-radius: 3px;
+    border-radius: 1px;
     object-fit: contain;
-    background-color: rgb(239, 239, 239);
-    border: 1px solid rgba(243, 243, 243, 0.65);
+    background-color: #f4339715;
 }
 
-.itemConfirmBox {
-    margin-top: calc(20px / 2);
-    margin-bottom: calc(20px / 2);
+.itemBoxConfirmContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .itemConfirmDetails {
@@ -82,18 +82,18 @@
 
 .itemConfirmDetails h4 {
     font-family: "Roboto", sans-serif;
-    font-size: 17px;
-    font-weight: 300;
-    color: rgb(95, 95, 95);
+    font-size: 16px;
+    font-weight: 400;
+    color: #4f4f4f;
     margin: 0;
 }
 
 .itemConfirmDetails h4 span,
 .itemConfirmDetails h4 a {
     font-family: "Roboto", sans-serif;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
-    color: black;
+    color: #252525;
     margin: 0;
 }
 
@@ -147,5 +147,10 @@
         width: auto;
         margin: 15px;
         padding: 30px 15px;
+    }
+
+    .itemBoxConfirm img {
+        width: 70px;
+        height: 80px;
     }
 }
