--- a/frontend/src/Components/Deshboard/Deshboard/style.css
+++ b/frontend/src/Components/Deshboard/Deshboard/style.css
@@ -16,7 +16,7 @@
     font-weight: 300;
     background-color: rgb(255, 255, 255);
     padding: 20px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
     padding-bottom: 25px;
     height: 100px;
 }
@@ -25,7 +25,7 @@
     width: 100%;
     background-color: rgb(255, 255, 255);
     border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
     display: flex;
     justify-content: center;
     align-items: center;
