--- a/frontend/src/Components/Deshboard/Sidebar/style.css
+++ b/frontend/src/Components/Deshboard/Sidebar/style.css
@@ -15,5 +15,5 @@
     padding-bottom: calc(24px / 2);
     padding-left: 20px;
     padding-right: 20px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
 }
