--- a/frontend/src/Components/Layouts/Header/style.css
+++ b/frontend/src/Components/Layouts/Header/style.css
@@ -3,7 +3,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .header .contant {
@@ -129,7 +129,7 @@
     backdrop-filter: blur(10px);
     z-index: 10;
     margin: 0px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .categoryHeader .contant {
