--- a/frontend/src/Components/Product/Products/style.css
+++ b/frontend/src/Components/Product/Products/style.css
@@ -73,7 +73,7 @@
 }
 
 .filterBoxMainBody {
-    border: 1px solid #0000001a;
+    border: 1px solid #e0e0e0;
     border-radius: 10px;
     height: fit-content;
 }
@@ -83,7 +83,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .openCategory {
@@ -126,7 +126,7 @@
 }
 
 .categoryBorderBottom {
-    border-bottom: 1px solid #0000001a;
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .categoryWrapper {
